--- a/login/loadingScreen.html
+++ b/login/loadingScreen.html
@@ -15,6 +15,10 @@
         <img class="loading3" src="./images/loading3.png" alt="loading character 3">
         <img class="loading4" src="./images/loading4.png" alt="loading character 4">
     </div>
+
+    <div class="loading_text">
+        <h1>Loading.....</h1>
+    </div>
 </body>
 <script type="module" src="./javascript/loadingScreen.js" defer></script>
 </html>
