--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -77,7 +77,7 @@
           <div class="title">Tunes</div>
           <span class="close-popup" id="closeTunesPopup">&times;</span>
         </div>
-        <div class="tunes-container">
+        <!-- <div class="tunes-container">
           <h1>Jamboree Jukebox</h1>
           <h6>(Apple Itunes API)</h6>
           <input type="text" id="searchInput" placeholder="Input a song title" />
@@ -85,7 +85,7 @@
       
           <div id="results"></div>
           <div id="juke"></div>
-        </div>
+        </div> -->
       </div>
     </div>    
 
@@ -306,9 +306,9 @@
                     </div>
                   </div>
 
-                  <div class="about-container-4">
+                  <!-- <div class="about-container-4">
                     <h2 class="about-c4-title">Other interests</h2>
-                  </div>
+                  </div> -->
                 </div>
               </div>
 
