New Changes March 10

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/login.css">
-    <link rel="stylesheet" href="./css/presets.css">
+    <link rel="stylesheet" href="/login/css/login.css">
+    <link rel="stylesheet" href="/login/css/presets.css">
     <title>Login</title>
 </head>
 <body>
-    <img class="background" src="./images/background.gif" alt="background_image">
+    <img class="background" src="/login/images/background.gif" alt="background_image">
 
     <div class="wrapper">
         <div class="center">
             <div class="left_container"> 
-                <img class="pfp" src="./images/pfp.png" alt="pfp">
-                <img class="pfp2" src="./images/pfp2.png" alt="pfp">
+                <img class="pfp" src="/login/images/pfp.png" alt="pfp">
+                <img class="pfp2" src="/login/images/pfp2.png" alt="pfp">
             </div>
         
             <div class="right_container">
@@ -44,6 +44,6 @@
     </div>
 
 </body>
-<script type="module" src="./javascript/firebase.js" defer></script>
-<script type="module" src="./javascript/login.js" defer></script>
+<script type="module" src="/login/javascript/firebase.js" defer></script>
+<script type="module" src="/login/javascript/login.js" defer></script>
 </html>
