--- a/login/loadingScreen.html
+++ b/login/loadingScreen.html
@@ -16,9 +16,9 @@
         <img class="loading4" src="./images/loading4.png" alt="loading character 4">
     </div>
 
-    <div class="loading_text">
+    <!-- <div class="loading_text">
         <h1>Loading.....</h1>
-    </div>
+    </div> -->
 </body>
 <script type="module" src="./javascript/loadingScreen.js" defer></script>
 </html>
